hphp/test/slow/reified_generics/static-method-in-reified-class.php.expectf
Fatal error: You may not use static methods in a class with reified type parameters in %s on line 4
